--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(241,188,211);
+background: radial-gradient(circle, rgba(241,188,211,1) 0%, rgba(165,198,238,1) 100%);
 }
 
 code {
